Updated: Code To Keep The Database Up And Running With Turborepo